--- a/index.html
+++ b/index.html
@@ -1,12 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TheBox</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <header>
+      <div id="logo">
+        <img src="./components/img/logo.png" alt="logo" />
+
+        <h1><span>The</span>Box</h1>
+      </div>
+
+      <nav>
+        <a href="#home"> <li>Home</li></a>
+        <a href="#about-us"> <li>About Us</li></a>
+        <a href="#projects"> <li>Projects</li></a>
+        <a href="#services"> <li>Services</li></a>
+        <a id="contact-us-btn" href="#contact-us"> <li>Contact Us</li></a>
+      </nav>
+    </header>
+
+    <main>
+      <section id="home">
+        <section id="home-main">
+          <aside>
+            <h1>Build things</h1>
+            <h1>is our mission</h1>
+          </aside>
+
+          <article id="features-projects">
+            <span> features projects</span>
+
+            <p>The National University of Architecture</p>
+
+            <div id="features-projects-btn">
+              <button>back</button>
+              <button>next</button>
+            </div>
+          </article>
+        </section>
+
+        <section id="home_reputacao">
+          <h4>Our reputation</h4>
+
+          <section id="reputatio-cards">
+            <article>
+              <i></i>
+
+              <span> best Services</span>
+
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Cumque?
+              </p>
+            </article>
+
+            <article>
+              <i></i>
+
+              <span> best Teams</span>
+
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Cumque?
+              </p>
+            </article>
+
+            <article>
+              <i></i>
+
+              <span> best Designs</span>
+
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Cumque?
+              </p>
+            </article>
+          </section>
+        </section>
+      </section>
+
+      <section id="about-us"></section>
+
+      <section id="projects"></section>
+
+      <section id="services"></section>
+
+      <section id="contact-us"></section>
+    </main>
+  </body>
 </html>
